# GeneNetworks

./: .gitignore  .readthedocs.yml  README.md  cluster_comparison.py  dash_app.py  dash_app_old.py  jupyterlab.yml  pages_plugin.py  pipeline_build_nx_graphs.py  pipeline_clustering.py  pipeline_clustering_graph.py  pipeline_clustering_spatial.py  pipeline_graph_communities.py  pipeline_leiden_clustering_scrna.py  pipeline_leiden_clustering_vigzen.py  pipeline_leiden_res_comparison.py  pipeline_node_classification.py  pipeline_node_eval.py  pipeline_visualizations.py  pyproject.toml  requirements.txt  test_napari.py
callbacks/: __init__.py  ann_data_store.py  compare_leiden.py  plots_parallel.py  scrna_data.py  scrna_pca.py  scrna_pca_spatial.py  training_eval.py
docs/: make.sh
graphxl/: __init__.py  data.py  experiment_handlers.py  features.py  graph_build.py  logging_setup.py  mlflow_client_.py  models.py  plotly_helpers.py  train.py  training_eval_anime.py
helpers/: __init__.py  boundary_feature_extraction.py  build_subsampler.py  clustering_scrna.py  data.py  data_boundary.py  embeddings_analysis.py  experiment_config.py  experiment_handlers.py  features.py  graph_build.py  graphlet_builds.py  inference.py  local_config.py  logging_setup.py  mlflow_client_.py  model_eval.py  models.py  node_state_features.py  pipeline_clustering_base.py  pipeline_clustering_graph_plotly.py  plotly_helpers.py  train.py  training_eval_anime.py  transform.py  unit_tests.py  utils.py
jobs_slurm/: code_server_start.sh  dash_app_start.sh  job_code.sh  job_dash_app.sh  job_mlflow.sh  (+9 more)
(+27 files in other folders)
